--- a/dlfmnav.html
+++ b/dlfmnav.html
@@ -81,7 +81,7 @@
 		function navigate(id) {
 
 			if (id == 'services')
-				window.open("https://www.notion.so/Services-afad49af87294cc6bd2b81c763f97aa6", '_blank').focus();
+				window.open("https://www.notion.so/Services-afad49af87294cc6bd2b81c763f97aa6", 'https://www.notion.so/Services-afad49af87294cc6bd2b81c763f97aa6').focus();
 			else if (id == "training")
 				window.open("https://www.notion.so/Training-93689c1bbd2f44e88cbcd36def8e834b", '_blank').focus();
 			else if (id == "documetation")
