--- a/dlfmnav.html
+++ b/dlfmnav.html
@@ -81,19 +81,19 @@
 		function navigate(id) {
 
 			if (id == 'services')
-				window.open("https://www.notion.so/afad49af87294cc6bd2b81c763f97aa6", '_blank').focus();
+				window.open("https://www.notion.so/afad49af87294cc6bd2b81c763f97aa6").focus();
 			else if (id == "training")
-				window.open("https://www.notion.so/93689c1bbd2f44e88cbcd36def8e834b", '_blank').focus();
+				window.open("https://www.notion.so/93689c1bbd2f44e88cbcd36def8e834b").focus();
 			else if (id == "documetation")
-				window.open("https://www.notion.so/86e74edf71774c6b84798a61e724f639", '_blank').focus();
+				window.open("https://www.notion.so/86e74edf71774c6b84798a61e724f639").focus();
 			else if (id == "sermons")
-				window.open("https://www.notion.so/f28a129db53946a7a37da5ea3ce256f7", '_blank').focus();
+				window.open("https://www.notion.so/f28a129db53946a7a37da5ea3ce256f7").focus();
 			else if (id == "meetings")
-				window.open("https://www.notion.so/c824222739a4436a9fa1a95b70fc823e", '_blank').focus();
+				window.open("https://www.notion.so/c824222739a4436a9fa1a95b70fc823e").focus();
 			else if (id == "website")
-				window.open("https://www.notion.so/4ef1d86e2560465fa048d78286927035", '_blank').focus();
+				window.open("https://www.notion.so/4ef1d86e2560465fa048d78286927035").focus();
 			else if (id == "plans")
-				window.open("https://www.notion.so/da63dae09c474ccdb6969858be7e5e19",'_blank').focus();
+				window.open("https://www.notion.so/da63dae09c474ccdb6969858be7e5e19").focus();
 			
 		}
 	</script>
